ストーリー検索の追加

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <style>
     body{
       background-color:#f5f6fa !important;
-      min-width:1000px;
     }
     div.movie{
       text-align:center;
     }
     div.container{
       background-color:#fff !important;
+    }
+    div.desctiption{
+      padding:10px;
     }
     p{
       font-size:0.8rem;
@@ -39,11 +41,12 @@
       </div>
 
       <div class="row">
-        <div class="col-5 movie">
+        <div class="col-sm-6 col-xs-12 movie">
+          <h4>1. 基本的な使い方</h4>
           <iframe width="296" height="640" src="https://www.youtube.com/embed/8fwKd6ElLTU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
-        <div class="col-7">
-          <div class="row">
+        <div class="col-sm-6 col-xs-12">
+          <div class="row desctiption">
             <div class="col-xs-12">
               <h5 class="text-primary">カムライの検索</h5>
               <p>
@@ -96,6 +99,27 @@
           </div>
           
         </div>
+        <div class="col-sm-6 col-xs-12 movie">
+          <h4>2. 修行</h4>
+          <iframe width="296" height="640" src="https://www.youtube.com/embed/z4ilPnCIq1U?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div class="col-sm-6 col-xs-12">
+          <div class="row desctiption">
+            <div class="col-xs-12">
+              <h5 class="text-primary">修行データの検索</h5>
+              <p>
+                語頭に「タイトル」をつけて送信すると、そのキーワードが含まれる修行ストーリーの情報を表示します。<br>
+                「選択」をつけて送信すると、選択肢の方から検索して表示します。
+              </p>
+              <h6 class="text-primary">画像での検索</h6>
+              <p>
+                修行のスクリーンショットを送ることで、そのストーリーの情報を表示します。<br/>
+                ただし、利用者全体での回数制限があり、上限まで達するとしばらく使用不可になります。（テキストメッセージ等は通常通り利用可能です。）<br />
+                また、文字を正しく認識できない場合もあります。
+              </p>
+            </div>
+
+
         <div class="col-12 movie">
           <p>それでは、楽しいカムトライフを。</p>
         </div>
