--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base target="_top">
+    <title>アメリ@カムトラ</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -118,18 +118,22 @@
                 また、文字を正しく認識できない場合もあります。
               </p>
             </div>
+          </div>
 
 
-        <div class="col-12 movie">
-          <p>それでは、楽しいカムトライフを。</p>
+          <div class="col-xs-12">
+            <p>それでは、楽しいカムトライフを。</p>
+          </div>
+          
         </div>
-        
+        <div class="col-xs-12 col-sm-12">
+            <footer class="my-5 pt-5 text-muted text-center text-small">
+              <p class="mb-1">© 2018 zawascript</p>
+            </footer>
+        </div>
       </div>
 
 
-      <footer class="my-5 pt-5 text-muted text-center text-small">
-        <p class="mb-1">© 2018 zawascript</p>
-      </footer>
     </div>
   </body>
 </html>
