音声ヘルプ

--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
                 ただし、利用者全体での回数制限があり、上限まで達するとしばらく使用不可になります。（テキストメッセージ等は通常通り利用可能です。）<br />
                 また、文字を正しく認識できない場合もあります。
               </p>
+              <h6 class="text-primary">音声での検索</h6>
+              <p>
+                LINEのマイクを使ってストーリーのタイトルを送信すると、そのストーリーの情報を表示します。<br/>
+                こちらも、利用者全体での回数制限があり、上限まで達するとしばらく使用不可になります。（テキストメッセージ等は通常通り利用可能です。）<br />
+                ※変換が曖昧なため、調整中の機能になります。
+              </p>
             </div>
           </div>
 
