スキル編追加

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           <h4>2. 修行</h4>
           <iframe width="296" height="640" src="https://www.youtube.com/embed/z4ilPnCIq1U?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
+
         <div class="col-sm-6 col-xs-12">
           <div class="row desctiption">
             <div class="col-xs-12">
@@ -126,13 +127,32 @@
               </p>
             </div>
           </div>
+          
+        </div>
 
+        <div class="col-sm-6 col-xs-12 movie">
+          <h4>3. スキル</h4>
+          <iframe width="296" height="640" src="https://www.youtube.com/embed/fFDlMAjYKJY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+
+        <div class="col-sm-6 col-xs-12">
+          <div class="row desctiption">
+            <div class="col-xs-12">
+              <h5 class="text-primary">スキル効果の検索</h5>
+              <p>
+                語頭に「スキル効果」をつけて送信すると、そのキーワードが含まれるスキルの情報を表示します。<br>
+                半角スペースでAND検索を行うことも可能です。
+              </p>
+            </div>
+          </div>
 
           <div class="col-xs-12">
             <p>それでは、楽しいカムトライフを。</p>
           </div>
           
         </div>
+
+
         <div class="col-xs-12 col-sm-12">
             <footer class="my-5 pt-5 text-muted text-center text-small">
               <p class="mb-1">© 2018 zawascript</p>
